<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_ss"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/subText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_summary"
            android:textSize="16sp"
            android:textColor="#444444"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_background"
            android:paddingHorizontal="16dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/hint_grey"
            android:elevation="2dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/edittext_background"
            android:elevation="2dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@color/hint_grey" />
        <LinearLayout
            android:id="@+id/password_hint_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/hint_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_hint"
                android:textColor="@color/error_colour" />

            <TextView
                android:id="@+id/hint_upper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uppercase_hint"
                android:textColor="@color/error_colour" />

            <TextView
                android:id="@+id/hint_special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_hint"
                android:textColor="@color/error_colour" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="24dp"
            android:paddingHorizontal="16dp"
            android:elevation="2dp"
            android:background="@drawable/edittext_background"
            android:backgroundTint="@color/authentication"
            android:text="@string/register" />
        <TextView
            android:id="@+id/login_redirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_redirect"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>
</ScrollView>